<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_splash"
            android:layout_width="341dp"
            android:layout_height="203dp"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            android:layout_marginBottom="35dp"
            android:src="@drawable/logo_pdbi" />

        <EditText
            android:id="@+id/search_bar"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/search_input_style"
            android:drawableStart="@drawable/ic_search_24dp"
            android:drawablePadding="8dp"
            android:ems="10"
            android:hint="@string/cari_data_budaya"
            android:inputType="textPersonName"
            android:textColor="@color/dark_grey" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/atau"
            android:textSize="18sp"
            android:layout_marginTop="35dp"
            android:textColor="@color/dark_grey" />

        <Button
            android:layout_marginTop="35dp"
            android:layout_marginBottom="80dp"
            android:id="@+id/button_telusuri"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/telusuri"
            android:textColor="@color/dark_blue"
            android:background="@drawable/custom_button"
            android:textAllCaps="false"
            />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>